Added photos folder and updated index.html with image paths

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
   <section id="vegetables">
     <h2>Fresh Vegetables</h2>
     <div class="product-grid">
-      <div class="product-card"><img src="tomato.jpg" alt=""><p>Tomatoes - ₹30/kg</p></div>
+      <div class="product-card"><img src="photos/tomato.jpg" alt=""><p>Tomatoes - ₹30/kg</p></div>
       <div class="product-card"><img src="potato.jpg" alt=""><p>Potatoes - ₹25/kg</p></div>
       <div class="product-card"><img src="onion.jpg" alt=""><p>Onions - ₹35/kg</p></div>
       <div class="product-card"><img src="carrot.jpg" alt=""><p>Carrots - ₹40/kg</p></div>
