Updated image paths in index.html

--- a/index.html
+++ b/index.html
@@ -253,48 +253,48 @@
   <section id="vegetables">
     <h2>Fresh Vegetables</h2>
     <div class="product-grid">
-      <div class="product-card"><img src="photos/tomato.jpg" alt=""><p>Tomatoes - ₹30/kg</p></div>
-      <div class="product-card"><img src="potato.jpg" alt=""><p>Potatoes - ₹25/kg</p></div>
-      <div class="product-card"><img src="onion.jpg" alt=""><p>Onions - ₹35/kg</p></div>
-      <div class="product-card"><img src="carrot.jpg" alt=""><p>Carrots - ₹40/kg</p></div>
-      <div class="product-card"><img src="spinach.jpg" alt=""><p>Spinach - ₹20/kg</p></div>
-      <div class="product-card"><img src="caul.jpg" alt=""><p>Cauliflower - ₹30/kg</p></div>
-      <div class="product-card"><img src="gp.jpg" alt=""><p>Green Peas - ₹40/kg</p></div>
-      <div class="product-card"><img src="beans.jpg" alt=""><p>Beans - ₹50/kg</p></div>
-      <div class="product-card"><img src="brinjal.jpg" alt=""><p>Brinjal - ₹28/kg</p></div>
-      <div class="product-card"><img src="cc.jpg" alt=""><p>Cucumber - ₹25/kg</p></div>
+      <div class="product-card"><img src="\photos\photos\tomato.jpg" alt=""><p>Tomatoes - ₹30/kg</p></div>
+      <div class="product-card"><img src="\photos\photos\potato.jpg" alt=""><p>Potatoes - ₹25/kg</p></div>
+      <div class="product-card"><img src="\photos\photos\onion.jpg" alt=""><p>Onions - ₹35/kg</p></div>
+      <div class="product-card"><img src="\photos\photos\carrot.jpg" alt=""><p>Carrots - ₹40/kg</p></div>
+      <div class="product-card"><img src="\photos\photos\spinach.jpg" alt=""><p>Spinach - ₹20/kg</p></div>
+      <div class="product-card"><img src="\photos\photos\caul.jpg" alt=""><p>Cauliflower - ₹30/kg</p></div>
+      <div class="product-card"><img src="\photos\photos\gp.jpg" alt=""><p>Green Peas - ₹40/kg</p></div>
+      <div class="product-card"><img src="\photos\photos\beans.jpg" alt=""><p>Beans - ₹50/kg</p></div>
+      <div class="product-card"><img src="\photos\photos\brinjal.jpg" alt=""><p>Brinjal - ₹28/kg</p></div>
+      <div class="product-card"><img src="\photos\photos\cc.jpg" alt=""><p>Cucumber - ₹25/kg</p></div>
     </div>
   </section>
 
   <section id="dairy">
     <h2>Dairy Products</h2>
     <div class="product-grid">
-      <div class="product-card"><img src="milk.jpg" alt=""><p>Milk - ₹50/L</p></div>
-      <div class="product-card"><img src="butter.jpg" alt=""><p>Butter - ₹80/200g</p></div>
-      <div class="product-card"><img src="cheese.jpg" alt=""><p>Cheese - ₹120/250g</p></div>
-      <div class="product-card"><img src="curd.jpg" alt=""><p>Curd - ₹30/200g</p></div>
-      <div class="product-card"><img src="paneer.jpg" alt=""><p>Paneer - ₹200/kg</p></div>
-      <div class="product-card"><img src="mp.jpg" alt=""><p>Milk Powder - ₹200/500g</p></div>
-      <div class="product-card"><img src="fm.jpg" alt=""><p>Flavored Milk - ₹25/250ml</p></div>
-      <div class="product-card"><img src="ic.jpg" alt=""><p>Ice Cream - ₹120/500g</p></div>
-      <div class="product-card"><img src="ghee.jpg" alt=""><p>Ghee - ₹400/500g</p></div>
-      <div class="product-card"><img src="yoo.jpg" alt=""><p>Yogurt - ₹35/200g</p></div>
+      <div class="product-card"><img src="\photos\photos\milk.jpg" alt=""><p>Milk - ₹50/L</p></div>
+      <div class="product-card"><img src="\photos\photos\butter.jpg" alt=""><p>Butter - ₹80/200g</p></div>
+      <div class="product-card"><img src="\photos\photos\cheese.jpg" alt=""><p>Cheese - ₹120/250g</p></div>
+      <div class="product-card"><img src="\photos\photos\curd.jpg" alt=""><p>Curd - ₹30/200g</p></div>
+      <div class="product-card"><img src="\photos\photos\paneer.jpg" alt=""><p>Paneer - ₹200/kg</p></div>
+      <div class="product-card"><img src="\photos\photos\mp.jpg" alt=""><p>Milk Powder - ₹200/500g</p></div>
+      <div class="product-card"><img src="\photos\photos\fm.jpg" alt=""><p>Flavored Milk - ₹25/250ml</p></div>
+      <div class="product-card"><img src="\photos\photos\ic.jpg" alt=""><p>Ice Cream - ₹120/500g</p></div>
+      <div class="product-card"><img src="\photos\photos\ghee.jpg" alt=""><p>Ghee - ₹400/500g</p></div>
+      <div class="product-card"><img src="\photos\photos\yoo.jpg" alt=""><p>Yogurt - ₹35/200g</p></div>
     </div>
   </section>
 
   <section id="snacks">
     <h2>Snacks & Beverages</h2>
     <div class="product-grid">
-      <div class="product-card"><img src="chips.jpg" alt=""><p>Chips - ₹20/pack</p></div>
-      <div class="product-card"><img src="bis.jpg" alt=""><p>Biscuits - ₹30/pack</p></div>
-      <div class="product-card"><img src="pc.jpg" alt=""><p>Cookies - ₹50/pack</p></div>
-      <div class="product-card"><img src="d.jpg" alt=""><p>Soft Drink - ₹35/500ml</p></div>
-      <div class="product-card"><img src="t.jpg" alt=""><p>Tea - ₹40/100g</p></div>
-      <div class="product-card"><img src="cof.jpg" alt=""><p>Coffee - ₹50/100g</p></div>
-      <div class="product-card"><img src="ed.jpg" alt=""><p>Energy Drink - ₹60/250ml</p></div>
-      <div class="product-card"><img src="fj.jpg" alt=""><p>Fruit Juice - ₹35/500ml</p></div>
-      <div class="product-card"><img src="pop.jpg" alt=""><p>Popcorn - ₹20/pack</p></div>
-      <div class="product-card"><img src="choco.jpg" alt=""><p>Chocolate - ₹50/pack</p></div>
+      <div class="product-card"><img src="\photos\photos\chips.jpg" alt=""><p>Chips - ₹20/pack</p></div>
+      <div class="product-card"><img src="\photos\photos\bis.jpg" alt=""><p>Biscuits - ₹30/pack</p></div>
+      <div class="product-card"><img src="\photos\photos\pc.jpg" alt=""><p>Cookies - ₹50/pack</p></div>
+      <div class="product-card"><img src="\photos\photos\d.jpg" alt=""><p>Soft Drink - ₹35/500ml</p></div>
+      <div class="product-card"><img src="\photos\photos\t.jpg" alt=""><p>Tea - ₹40/100g</p></div>
+      <div class="product-card"><img src="\photos\photos\cof.jpg" alt=""><p>Coffee - ₹50/100g</p></div>
+      <div class="product-card"><img src="\photos\photos\ed.jpg" alt=""><p>Energy Drink - ₹60/250ml</p></div>
+      <div class="product-card"><img src="\photos\photos\fj.jpg" alt=""><p>Fruit Juice - ₹35/500ml</p></div>
+      <div class="product-card"><img src="\photos\photos\pop.jpg" alt=""><p>Popcorn - ₹20/pack</p></div>
+      <div class="product-card"><img src="\photos\photos\choco.jpg" alt=""><p>Chocolate - ₹50/pack</p></div>
     </div>
   </section>
 
