Updated image paths in index.html

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
   <section id="vegetables">
     <h2>Fresh Vegetables</h2>
     <div class="product-grid">
-      <div class="product-card"><img src="\photos\photos\tomato.jpg" alt=""><p>Tomatoes - ₹30/kg</p></div>
+      <div class="product-card"><img src="photos/photos/tomato.jpg" alt=""><p>Tomatoes - ₹30/kg</p></div>
       <div class="product-card"><img src="\photos\photos\potato.jpg" alt=""><p>Potatoes - ₹25/kg</p></div>
       <div class="product-card"><img src="\photos\photos\onion.jpg" alt=""><p>Onions - ₹35/kg</p></div>
       <div class="product-card"><img src="\photos\photos\carrot.jpg" alt=""><p>Carrots - ₹40/kg</p></div>
@@ -294,7 +294,10 @@
       <div class="product-card"><img src="\photos\photos\ed.jpg" alt=""><p>Energy Drink - ₹60/250ml</p></div>
       <div class="product-card"><img src="\photos\photos\fj.jpg" alt=""><p>Fruit Juice - ₹35/500ml</p></div>
       <div class="product-card"><img src="\photos\photos\pop.jpg" alt=""><p>Popcorn - ₹20/pack</p></div>
-      <div class="product-card"><img src="\photos\photos\choco.jpg" alt=""><p>Chocolate - ₹50/pack</p></div>
+      <div class="product-card"><img src="\photos\photos\git add index.html
+        git commit -m "Updated image paths in index.html"
+        git push
+        choco.jpg" alt=""><p>Chocolate - ₹50/pack</p></div>
     </div>
   </section>
 
