Updated image paths and added photos folder

--- a/index.html
+++ b/index.html
@@ -294,10 +294,7 @@
       <div class="product-card"><img src="photos/photos/ed.jpg" alt=""><p>Energy Drink - ₹60/250ml</p></div>
       <div class="product-card"><img src="photos/photos/fj.jpg" alt=""><p>Fruit Juice - ₹35/500ml</p></div>
       <div class="product-card"><img src="photos/photos/pop.jpg" alt=""><p>Popcorn - ₹20/pack</p></div>
-      <div class="product-card"><img src="photos/photos/git add index.html
-        git commit -m "Updated image paths in index.html"
-        git push
-        choco.jpg" alt=""><p>Chocolate - ₹50/pack</p></div>
+      <div class="product-card"><img src="photos/photos/choco.jpg" alt=""><p>Chocolate - ₹50/pack</p></div>
     </div>
   </section>
 
